# rl_mestrado

./: README.md  pyproject.toml  requirements.txt
backup_results/backtest/: 2021_11_03__10_27_11_lr_0.0001_epoch_50000.csv  2021_11_03__10_27_11_lr_0.01_epoch_50000.csv  2021_11_03__10_27_11_lr_1e-05_epoch_50000.csv  2021_11_03__23_48_19_daily_lr_0.0001_epoch_50000.csv  2021_11_03__23_48_19_daily_lr_0.01_epoch_50000.csv  2021_11_03__23_48_19_daily_lr_1e-05_epoch_50000.csv  2021_11_03__23_48_19_daily_lr_1e-06_epoch_50000.csv  2021_11_04__01_03_02_aggregated_daily.csv  2021_11_04__22_20_58_daily_lr_0.0001_epoch_50000.csv  2021_11_04__22_20_58_daily_lr_0.01_epoch_50000.csv  2021_11_04__22_20_58_daily_lr_1e-05_epoch_50000.csv  2021_11_04__22_20_58_daily_lr_1e-06_epoch_50000.csv  2021_11_05__15_42_40_daily_actor_lr_0.0001_critic_lr_0.001_epoch_50000.csv  2021_11_05__15_42_40_daily_actor_lr_0.001_critic_lr_0.01_epoch_50000.csv  2021_11_05__15_42_40_daily_actor_lr_1e-05_critic_lr_0.0001_epoch_50000.csv  2021_11_05__15_42_40_daily_actor_lr_1e-06_critic_lr_9.999999999999999e-06_epoch_50000.csv  2021_11_05__18_57_10_aggregated_daily_v2.csv
notebooks/: 01_Getting_Data_From_Databases.ipynb  02_FeatureEngineering.ipynb  04_Baseline_Backtesting_MeanVariancePortfolio_with_ProbMomentum.ipynb  playground_models.ipynb  plot_best_models_results.ipynb  plot_training.ipynb  plot_training_temporal_feature.ipynb
raw/: raw_daily_prices.csv  raw_weekly_prices.csv
rl_mestrado/: __init__.py
silver/: daily_feature_set.csv  weekly_feature_set.csv
tests/: test_rl_mestrado.py
(+1498 files in other folders)
